// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toaster scenarios 1`] = `
<div
  className="sc-fzozJi dyhXEA"
>
  Hello
</div>
`;

exports[`Toaster scenarios 2`] = `
<div
  className="sc-fzozJi dyhXEA"
>
  Styled toaster
</div>
`;

exports[`Toaster scenarios 3`] = `
<div
  className="sc-fzozJi jBYjbj"
>
  Styled opened toaster
</div>
`;
